added jdare clankBundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,7 +34,7 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
+    bundles:        [ JDareClankBundle ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
@@ -71,3 +71,8 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+clank:
+    web_socket_server:
+        port: 8080        #The port the socket server will listen on
+        host: 127.0.0.1   #(optional) The host ip to bind to
